--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,9 @@
     <body>
     </body>
     <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
+    <script src="https://unpkg.com/vue-router@3.5.2/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vue@3.2.1"></script>
+   
     <script src="main.js" type="module"></script>
     <!-- TODO: modulepreload/async! -->
 </html>
