gallery updates & refactoring

--- a/html/index.html
+++ b/html/index.html
@@ -13,5 +13,5 @@
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/vue-router@4"></script>
     <script src="main.js" type="module"></script>
-    <!-- TODO: modulepreload/async! -->
+    <!-- TODO:BRO modulepreload/async/pack everythin? -->
 </html>
