--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>BEAM Gallery</title>
+        <link rel="icon" type="image/svg" href="./icon.svg"/>
         <link href="./css/fonts.css" rel="stylesheet">
         <link href="./css/styles.css" rel="stylesheet">
     </head>
     <body>
     </body>
-    <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/vue-router@4"></script>
     <script src="main.js" type="module"></script>
