--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>BEAM Gallery</title>
-        <link rel="icon" type="image/svg" href="./icon.svg"/>
+        <link rel="icon" type="image/svg" href="./appicon.svg"/>
         <link href="./css/fonts.css" rel="stylesheet">
         <link href="./css/styles.css" rel="stylesheet">
     </head>
