migrated to webpack, build added

--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>BEAM Gallery</title>
-        <link rel="icon" type="image/svg" href="./appicon.svg"/>
-        <link href="./css/fonts.css" rel="stylesheet">
-        <link href="./css/styles.css" rel="stylesheet">
-    </head>
-    <body>
-    </body>
-    <script src="https://unpkg.com/vue@3"></script>
-    <script src="https://unpkg.com/vue-router@4"></script>
-    <script src="main.js" type="module"></script>
-    <!-- TODO:BRO modulepreload/async/pack everythin? -->
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>BEAM NFT Gallery</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"><link rel="icon" href="appicon.svg"><link href="main.css" rel="stylesheet"></head>
+  <body>
+  <script src="main.bundle.js"></script></body>
 </html>
