--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>BEAM Gallery</title>
-        <link rel="icon" type="image/svg" href="./appicon.svg"/>
-        <link href="./css/fonts.css" rel="stylesheet">
-        <link href="./css/styles.css" rel="stylesheet">
-    </head>
-    <body>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>BEAM Gallery</title>
+    <link rel="icon" type="image/svg" href="./appicon.svg" />
+    <link href="./css/fonts.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
+  </head>
+  <body></body>
 </html>
